--- a/src/components/items/itemImage/ItemImage.css
+++ b/src/components/items/itemImage/ItemImage.css
@@ -1,6 +1,7 @@
 .item-image-container {
   height: 100%;
   width: 100%;
+  transition: background-color 0.2s ease;
 }
 
 .image-replacement {
@@ -11,6 +12,7 @@
   font-weight: bold;
   height: 100%;
   width: 100%;
+  transition: background-color 0.2s ease;
 }
 
 .active-card.image-replacement {
